# TCC-TGCSA

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  Readme.md  expl-16  expl-16.cpp  read_ints.cpp  sdsl-csa-example.cpp  write_ints.cpp
benchmark/: CMakeLists.txt  custom_memory_manager.h  main_benchmark.cpp  space_benchmark.sh
benchmark/data_generator/: CMakeLists.txt  data_generator.cpp  data_generator_ci.cpp  file_utils.cpp  file_utils.h
benchmark/space_benchmark/: space_benchmark.sh
benchmark/time_benchmark/: CMakeLists.txt  time_benchmark.cpp
examples/: example2.cpp  sdsl-csa-example.cpp
massif_outputs/ms_print/: ms_print_adj_list  ms_print_edge_list  ms_print_tgcsa
prototype/: Bitvector.h  CompactSuffixArray.h  Contact.h  Main.cpp  Makefile
src/: Bitvector.cpp  Bitvector.h  CMakeLists.txt  CompactSuffixArray.cpp  Contact.cpp  Main.cpp  Makefile  bitvector.cpp  compact_suffix_array.cpp  compact_suffix_array.h  contact.cpp  main.cpp  tgcsa.cpp  tgcsa.h
src/data_generator/: CMakeLists.txt  data_generator.cpp  data_generator.h  data_generator_ci.cpp  data_generator_cli.cpp
src/libs/: CompactSuffixArray.h  Contact.h
src/tgcsa/: CMakeLists.txt  bitvector.cpp  bitvector.h  compact_suffix_array.cpp  compact_suffix_array.h  tgcsa.cpp  tgcsa.h
src/uncompact_temporal_graph/: CMakeLists.txt  uncompact_temporal_graph_adj_list.cpp  uncompact_temporal_graph_adj_list.h  uncompact_temporal_graph_edge_list.cpp  uncompact_temporal_graph_edge_list.h  uncompact_temporal_graph_utils.cpp  uncompact_temporal_graph_utils.h
src/utils/: CMakeLists.txt  command_line_interface.cpp  command_line_interface.h  contact.h  file_utils.cpp  file_utils.h  suffix.cpp  suffix.h  temporal_graph_query.h
tests/: CMakeLists.txt  bitvector_tests.cpp  compact_suffix_array_tests.cpp  contact_tests.cpp  file_utils_tests.cpp  temporal_graphs_tests.cpp  tgcsa_tests.cpp
tests/test_data/: random_contacts_test_01.csv
